# jira-time-track

./: .dockerignore  .env.example  .gitignore  .output.txt  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
.github/workflows/: ci.yml
frontend/: .versionrc  CHANGELOG.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/scripts/: cargo-updater.cjs
frontend/src/: App.vue  style.css
frontend/src/__tests__/: App.spec.js
frontend/src/components/: ConfirmModal.vue
frontend/src/components/__tests__/: ConfirmModal.spec.js
frontend/src/router/: index.js
frontend/src/views/: ChangePassword.vue  Confirm.vue  JiraServers.vue  JiraTickets.vue  Login.vue  Register.vue
frontend/src/views/__tests__/: JiraTickets.spec.js
migrations/: 20260120153000_initial_schema.sql  20260120171000_fix_cascade_delete.sql  20260120194500_add_sort_order_to_tickets.sql
src/: lib.rs  main.rs
src/handlers/: auth.rs  jira_servers.rs  jira_tickets.rs  meta.rs  mod.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/repositories/: jira_servers.rs  jira_tickets.rs  mod.rs  users.rs
src/services/: auth.rs  jira.rs  mail.rs  mod.rs
src/utils/: encryption.rs  mod.rs
tests/: api_e2e.rs
