[package]
name = "jira-time-track"
version = "1.0.5"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
argon2 = "0.5"
aes-gcm = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
hex = "0.4"
base64 = "0.22"
rand = "0.9"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "hostname", "builder", "smtp-transport"] }

[dev-dependencies]
axum-test = "19"
